Corrects mobile vertical spacing for platform toolbox components

--- a/_sass/_redesign-platform.scss
+++ b/_sass/_redesign-platform.scss
@@ -1303,7 +1303,7 @@ $solutions-card-bottom-margin: 36px;
             }
             @media screen and (max-width: 834px) {
                 width: 100%;
-                min-height: 300px;
+                font-size: 0;
             }
             > img {
                 object-fit: cover;
